objects/Quote.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency/Brokerage</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculatedPriceJSON__c</fullName>
        <label>Calculated Price Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this quote</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupCensusId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Census</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__GroupCensus__c.vlocity_ins__CensusStatus__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if quote requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO (Admin Services Only)</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Mid Sized Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MonthlyPremium__c</fullName>
        <label>Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OpportunityAccountId__c</fullName>
        <description>Formula: opportunity&apos;s account identifier casted to a text value.</description>
        <formula>Opportunity.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Quotes Using This Price List</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryProductId__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.Product2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quoted Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryRootItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Root Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Parent Quote for Primary Product</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingType__c</fullName>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RenewalSourceContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RootItemTotal__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.UnitPrice + vlocity_ins__TotalAdjustmentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TermsofEligibility__c</fullName>
        <label>Terms of Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAdjustmentAmount__c</fullName>
        <description>Manual price adjustments on total price.</description>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAmount__c</fullName>
        <description>Total taxes, fees, and price for the Quote.</description>
        <formula>vlocity_ins__TotalTaxAmount__c + vlocity_ins__TotalFeeAmount__c + vlocity_ins__RootItemTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalFeeAmount__c</fullName>
        <description>Total amount of itemized fees for Quote.</description>
        <label>Total Fee Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumforTerm__c</fullName>
        <description>The total amount of premium that will be collected for this quote over the full term.</description>
        <label>Total Premium for Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalSumInsured__c</fullName>
        <formula>vlocity_ins__PrimaryRootItemId__r.vlocity_ins__TotalSumInsured__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sum Insured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalTaxAmount__c</fullName>
        <description>Total amount of itemized taxes for Quote.</description>
        <label>Total Tax Amount</label>
        <summarizedField>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__AdjustmentType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__QuotePricingAdjustment__c.vlocity_ins__QuoteId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnderwriterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.QUOTENUMBER</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__LargeGroupQuote</fullName>
        <active>true</active>
        <label>Large Group Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Quote</fullName>
        <active>true</active>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__SmallGroupQuote</fullName>
        <active>true</active>
        <label>Small Group Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>